<resources>
    <string name="app_name">FindTruck</string>

    <string name="user">Usuário</string>
    <string name="name">Nome</string>
    <string name="lastname">Sobrenome</string>
    <string name="password">Senha</string>
    <string name="confirmpassword">Confirmação da Senha</string>
    <string name="login">Entrar</string>
    <string name="forgot">Esqueci minha senha</string>
    <string name="register">Cadastrar</string>
    <string name="success">Sucesso!</string>
    <string name="ops">Ops</string>
    <string name="message_invalid_user">Usuário ou senha inválidos</string>
    <string name="ok">Ok</string>
    <string name="generic_login">Estamos com problemas para responder o seu login. Tente novamente mais tarde.</string>
    <string name="generic_register">Não conseguimos criar a sua conta. Tente novamente mais tarde.</string>
    <string name="success_register">Não conseguimos criar a sua conta. Tente novamente mais tarde.</string>
    <string name="same_password">As senhas precisam ser iguais</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
